// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check_run.completed: check_run.completed 1`] = `undefined`;

exports[`chect_suite.completed: chect_suite.completed 1`] = `undefined`;

exports[`commit_comment.created: commit_comment.created 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Commit Comment (koishijs/koishi)
User: Shigma
URL: https://github.com/koishijs/koishi/commit/bff469eabe14d42683a4f7c3ccb659daec5e1c00#commitcomment-36878220
This will introduce a failure in test.",
  },
]
`;

exports[`issue_comment.created.1: issue_comment.created.1 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Issue Comment (koishijs/koishi#19)
User: simon300000
URL: https://github.com/koishijs/koishi/issues/19#issuecomment-576277946
Mich würde auch interessieren, was ist „CoolQ“?",
  },
]
`;

exports[`issue_comment.created.2: issue_comment.created.2 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Pull Request Comment (koishijs/koishi#20)
User: Kouchya
URL: https://github.com/koishijs/koishi/pull/20#issuecomment-576291300
C'est important!",
  },
]
`;

exports[`issues.assigned: issues.assigned 1`] = `undefined`;

exports[`issues.closed: issues.closed 1`] = `undefined`;

exports[`issues.labeled: issues.labeled 1`] = `undefined`;

exports[`issues.opened: issues.opened 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Issue Opened (koishijs/koishi#19)
Title: Wie kann man um das Koishi zu installieren?
User: simon300000
URL: https://github.com/koishijs/koishi/issues/19
Ich verstecke Englisch und Chinesisch nicht! Gab es Personen, die mir helfen kann?",
  },
]
`;

exports[`pull_request.opened: pull_request.opened 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Pull Request Opened (koishijs/koishi#364852707)
koishijs:develop <- koishijs:experimental
User: simon300000
URL: https://github.com/koishijs/koishi/pull/20
Das ist wichtig!",
  },
]
`;

exports[`pull_request_review.submitted.1: pull_request_review.submitted.1 1`] = `undefined`;

exports[`pull_request_review.submitted.2: pull_request_review.submitted.2 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Pull Request Review (koishijs/koishi#364852707)
User: Kouchya
URL: https://github.com/koishijs/koishi/pull/20#pullrequestreview-345349537
LGTM",
  },
]
`;

exports[`pull_request_review_comment.created: pull_request_review_comment.created 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Pull Request Review Comment (koishijs/koishi#364852707)
Path: packages/test-utils/src/mocks.ts
User: Shigma
URL: https://github.com/koishijs/koishi/pull/20#discussion_r368570320
Naming is so hard......",
  },
]
`;

exports[`push.commit: push.commit 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] Push (koishijs/koishi)
Ref: refs/heads/develop
User: Shigma
Compare: https://github.com/koishijs/koishi/compare/976c6e8f09a4...3ae7e7044d06
chore: adjust
fix(core): create major context at demand",
  },
]
`;

exports[`push.tag: push.tag 1`] = `
Array [
  "send_group_msg",
  Object {
    "auto_escape": false,
    "group_id": 123,
    "message": "[GitHub] koishijs/koishi published tag 1.5.0",
  },
]
`;
